aws/eks/portainer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
  namespace: seartify-dev
spec:
  type: ClusterIP
  selector:
    app: portainer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
