aws/eks/portainer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: seartify-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dev.seartify.com
    http:
      paths:
      - path: /portainer/
        pathType: Prefix
        backend:
          service:
            name: portainer-service
            port:
              number: 80
